CVS code -
- files.c:
	- Added status messages for converted DOS and Mac files.
	  People should know that their file wasnt normally formatted.
- nano.c:
	- New function do_prev_word, similar to do_next_word.  Hard coded as
	  Alt-space, as next word is hard coded as control-space.
- po/sv.po:
	- Updated Swedish translation (Christian Rose).
- po/sv.po:
	- Updated Danish translation (Keld Simonsen).
- po/es.po:
	- Style updates to Spanish translation (Santiago Vila).
- po/ru.po, uk.po:
	- Updated Russian and Ukrainian translation (Sergey A. Ribalchenko).

nano-1.1.2 - 10/03/2001
- General
	- Added BUGS #63 & 64.  Fixes in search_init() and nanogetstr(),
	  new flag CLEAR_BACKUPSTRING because there's no easy way to
	  clear the backupstring without making it global (messy), so we
	  use a flag instead (just as messy?)
	- --enable-tiny now leaves out the Auto Indent code, do you really
	  need that on a bootdisk? =-)
	- New flag -o, --operatingdir, similar to Pico's -o mode.  New
	  function check_operating_dir(), changes to load_file (arg),
	  open_file_dup_search (arg), new function do_gotopos for -F
	  (David Lawrence Ramsey).
	- Code to read/write dos formatted files.  Massive amounts of
	  new code in read_line and write_file.  New cmdline flag
	  (-D --dos) to automatically write the file in DOS format,
	  regardless of the original format.
	- Mac file writing supported too.  Flag -M, --mac.  Toggle 
	  Meta-O (MacOS? OS-X? =-)
	- New smooth scroll code by Ken Tyler.  New flag -S, --smooth,
	  changes to page_up() and page_down().  Many fixes to paging by
	  David Lawrence Ramsey.
	- Bracket (brace, parens, etc) matching code by Ken Tyler.  
	  New functions do_find_bracket(), changes to findnextstr(),
	  command is Meta-] (hope you dont mind since I already sold off
	  Meta-O to the MacOS file code Ken...) Fixes to bracket_msg
	  by DLR.
	- Call do_gotopos from do_alt_spell() to keep position
	  consistent when invoking alt speller (DLR).