@@ -229,9 +229,9 @@ at the following fine web and ftp sites:</font>
 
 <li>
 <font color="#330000"><a href="http://www.ewtoo.org/~astyanax/nano/dist">http://www.ewtoo.org/~astyanax/nano/dist</a></font></li>
-
 <li>
-<font color="#330000"><a href="ftp://ftp.nano-editor.org/pub/nano">ftp://ftp.nano-editor.org/pub/nano</a></font></li>
+<font color="#330000"><a href="ftp://ftp.gnu.org/pub/gnu/nano">ftp://ftp.gnu.org/pub/gnu/nano</a></font></li>
+
 </ul>
 </blockquote>
 
@@ -247,8 +247,6 @@ packages.</font></h2>
 <li>
 <font color="#330000"><a href="http://www.ewtoo.org/~astyanax/nano/dist/RPMS">http://www.ewtoo.org/~astyanax/nano/dist/RPMS</a></font></li>
 
-<li>
-<font color="#330000"><a href="ftp://ftp.nano-editor.org/pub/nano/RPMS">ftp://ftp.nano-editor.org/pub/nano/RPMS</a></font></li>
 </ul>
 <font color="#330000">Additionally, check out the Redhat contribs section
 at:</font>
